# ReiToEngine

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Engine/Source/Editor/: CMakeLists.txt  Camera.h  Info.plist  test.cpp
Engine/Source/Runtime/: CMakeLists.txt
Engine/Source/Runtime/Core/: Core.cpp  Core.h  InnerCore.h  MinimalCore.h  README.md
Engine/Source/Runtime/Core/HAL/: Platform.h  PlatformDefines.h
Engine/Source/Runtime/Core/Logger/: Asserts.h  Logger.cpp  Logger.h
Engine/Source/Runtime/Core/Macro/: Defines.h  Functions.h  Macro.h
Engine/Source/Runtime/Core/Math/: IMath.h  IMatrix.h  IVector.h  SMatrix.h  SVector.h  SVector2.h  SVector3.h  SVector4.h  VectorInclude.h
Engine/Source/Runtime/Core/Object/: IImage.h  TGAImage.h
Engine/Source/Runtime/Core/Platform/: Platform.h
Engine/Source/Runtime/Function/Renderer/: IRenderer.h  SimpleRenderer.h
Engine/Source/Runtime/Function/WindowsManager/: IWindowsManager.h
Engine/Source/Runtime/L0_Macro/: Defines.h  Functions.h  Include.h  Macro.h
Engine/Source/Runtime/L100_Launch/: LaunchEngineLoop.cpp  LaunchEngineLoop.h
Engine/Source/Runtime/L20_Platform/: Include.h  Linux.cpp  MacOS.mm  PlatformFunctions.h  Windows.cpp
Engine/Source/Runtime/L20_Platform/L20_Memory/: Function.h  Include.h  Linux.cpp  MacOS.mm  Windows.cpp
Engine/Source/Runtime/L20_Platform/L21_Console/: Functions.h  IConsole.h  Linux.cpp  MacOS.mm  Windows.cpp
Engine/Source/Runtime/L20_Platform/L21_Logger/: Assert.h  Include.h  Logger.cpp  Logger.h
Engine/Source/Runtime/L20_Platform/L22_Timer/: Functions.h  Linux.cpp  MacOS.mm  Timer.cpp  Timer.h  TimerWindows.cpp  TimerWindows.h  Windows.cpp
Engine/Source/Runtime/L20_Platform/L23_Logger/: Assert.h  Logger.cpp  Logger.h
Engine/Source/Runtime/L20_Platform/L23_MemoryManager/: IMemoryManager.h  Memory.cpp  Memory.h  RTCMemoryManager.cpp  RTDebugHeapMemoryManager.cpp  RTDebugStackMemoryManager.h  RTMemoryPool.h  RTReleaseHeapMemoryManager.cpp  RTReleaseStackMemoryManager.h
Engine/Source/Runtime/L20_Platform/L23_SingletonFactory/: RuntimeSingleton.h  SingletonFactory.h
Engine/Source/Runtime/L20_Platform/L24_Containers/: Array.h  Deque.h  DoublyLinkedList.h  IContainer.h  Include.h  List.h  Map.h  Set.h  Stack.h  UnorderedMap.h  UnorderedSet.h
Engine/Source/Runtime/L20_Platform/L24_Math/: IMath.h  Include.h  SMatrix.h  SVector.h  SVector2.h  Vertex3D.h
Engine/Source/Runtime/L20_Platform/L24_Objects/: Include.h  String.h  StringFunction.cpp
Engine/Source/Runtime/L20_Platform/L25_Event/: EventEnums.h  EventSystem.cpp  EventSystem.h
Engine/Source/Runtime/L20_Platform/L26_File/: CFile.cpp  CFile.h  CFileManager.cpp  CFileManager.h  FileDefines.h  IFile.h  IFileManager.h
Engine/Source/Runtime/L20_Platform/L27_LoggerSystem/: LoggerSystem.cpp  LoggerSystem.h
Engine/Source/Runtime/L20_Platform/L30_MemoryManager/: BinnedMemoryManager.cpp  BinnedMemoryManager.h  IBlock.h  ICustomMemoryManager.h  IMemoryManager.h  Memory.cpp  Memory.h  RTCMemoryManager.cpp  RTCMemoryManager.h  RTDebugHeapMemoryManager.cpp  RTDebugHeapMemoryManager.h  RTDebugStackMemoryManager.cpp  RTMimallocManager.cpp  RTMimallocManager.h  RTReleaseHeapMemoryManager.cpp  RTReleaseHeapMemoryManager.h  RTReleaseStackMemoryManager.h
Engine/Source/Runtime/L20_Platform/L31_SingletonFactory/: SingletonFactory.cpp  SingletonFactory.h
Engine/Source/Runtime/L20_Platform/L32_Containers/: Array.h  Deque.h  DoublyLinkedList.h  IContainer.h  List.h  Map.h  Set.h  Stack.h  UnorderedMap.h  UnorderedSet.h  Vector.h
Engine/Source/Runtime/L20_Platform/L32_Objects/: Include.h  String.cpp  String.h  StringFunction.cpp  StringFunction.h
Engine/Source/Runtime/L20_Platform/L33_Event/: Event.cpp  Event.h  EventEnums.h  EventSystem.cpp  EventSystem.h
Engine/Source/Runtime/L20_Platform/L35_Input/: Include.h  InputDevice.h  InputDeviceKeyboard.h  InputDeviceMouse.h  InputEnums.h  InputMonitor.cpp  InputMonitor.h  InputSystem.cpp  InputSystem.h  MacOSXGlobalInputMonitor.h  MacOSXGlobalInputMonitor.mm  MacOSXInputMonitor.h  MacOSXInputMonitor.mm  WindowsInputMonitor.cpp  WindowsInputMonitor.h
Engine/Source/Runtime/L20_Platform/L37_Window/: Functions.h  IWindow.h  IWindowView.h  Linux.cpp  MacOS.mm  WindowData.h  WindowEnums.h  Windows.cpp
Engine/Source/Runtime/L20_Platform/L37_WindowSystem/: WindowsManager.cpp  WindowsManager.h
Engine/Source/Runtime/L40_HAL/: Include.h
Engine/Source/Runtime/L40_HAL/L40_File/: CFile.cpp  CFile.h  CFileManager.h  IFile.cpp  IFile.h  IFileManager.cpp  IFileManager.h  Include.h
Engine/Source/Runtime/L40_HAL/L55_RHI/: IRendererBackend.cpp  IRendererBackend.h  IRendererFrontend.cpp  IRendererFrontend.h  Include.h  RendererSystem.cpp  RendererSystem.h  RendererTypes.h
Engine/Source/Runtime/L40_HAL/RHI/: IRendererBackEnd.cpp  IRendererBackEnd.h  IRendererFrontend.h  RendererBackEnd.cpp  RendererBackEnd.h  RendererFrontend.cpp  RendererFrontend.h  RendererSystem.cpp  RendererSystem.h  RendererTypes.h
Engine/Source/Runtime/L40_HAL/WindowsManager/: WindowsManager.h
Engine/Source/Runtime/L60_Core/: Core.h  Include.h
Engine/Source/Runtime/Launch/: Game.cpp  Game.h  GameTypes.h  LaunchEngineLoop.cpp  LaunchEngineLoop.h
Engine/Source/Test/: CMakeLists.txt
Engine/Source/Test/Containers/: Containers_advanced_tests.cpp  Containers_basic_tests.cpp  Containers_more_tests.cpp
Engine/Source/Test/Core/: RuntimeTestInit.cpp  TestCore.h  main.cpp
Engine/Source/Test/Math/: CMakeLists.txt  MathTest.h  Math_advanced_tests.cpp  Quaternion_more_tests.cpp  Quaternion_ops_tests.cpp  Quaternion_tests.cpp  SMatrix_identity_zero_tests.cpp  SMatrix_inverse_tests.cpp  SMatrix_memory_tests.cpp  SMatrix_more_tests.cpp  SMatrix_tests.cpp  SVector4_Quaternion_memory_tests.cpp  SVector_SMatrix_helper_tests.cpp  SVector_memory_tests.cpp  SVector_more_tests.cpp  SVector_tests.cpp  main.cpp
Engine/Source/Test/Memory/: Memory_basic_tests.cpp  Memory_extended_tests.cpp  Memory_managers_tests.cpp  Memory_stats_tests.cpp
(+249 files in other folders)
